--- a/service/src/main/webapp/forEmployee.html
+++ b/service/src/main/webapp/forEmployee.html
@@ -250,7 +250,7 @@
                     </div>
                     <div class="weui-form-preview__item">
                         <label class="weui-form-preview__label">具体描述</label>
-                        <span class="weui-form-preview__value" style="text-align: left;" v-if="letterInfo.contents.length > 10">
+                        <span class="weui-form-preview__value" style="text-align: left;" v-if="letterInfo.contents.length > 20">
                             {{letterInfo.contents}}
                            </span>
                         <span class="weui-form-preview__value" style="text-align: right;" v-else>
@@ -279,7 +279,7 @@
                     <div style="margin-left: 10px;" v-for="item in letterInfo.examines" :key="item.examineId">
 
                         <div class="weui-form-preview__item" >
-                            <label class="weui-form-preview__label">处理人:</label>
+                            <label class="weui-form-preview__label" style="width: 5em;">处理人:</label>
                             <span class="weui-form-preview__value" style="text-align: left;">
                                 {{item.dealUserName}}
                            </span>
@@ -293,14 +293,14 @@
                         <!--</div>-->
 
                         <div class="weui-form-preview__item" >
-                            <label class="weui-form-preview__label">处理建议:</label>
+                            <label class="weui-form-preview__label" style="width: 5em;">处理建议:</label>
                             <span class="weui-form-preview__value" style="text-align: left;">
                                 {{item.examineAdvise}}
                            </span>
                         </div>
 
                         <div class="weui-form-preview__item" >
-                            <label class="weui-form-preview__label">处理时间:</label>
+                            <label class="weui-form-preview__label" style="width: 5em;">处理时间:</label>
                             <span class="weui-form-preview__value" style="text-align: left;">
                                 {{item.statusDate | dateFormat}}
                            </span>
@@ -506,6 +506,8 @@
                     vueBus.$emit("info", "loadingClose");
                     vm.showErrMsg("系统繁忙,请稍后再试!");
                     console.log(error);
+                }).finally(function(){
+                    vueBus.$emit("info", "loadingClose");
                 });
             },
             deleteFile(){
@@ -706,6 +708,9 @@
             vueBus.$on("info", function (val, param) {
                 if ("succOpen" == val) {
                     vm.succMsg = true;
+                    setTimeout(function(){
+                    vm.succMsg = false;
+                    },1200);
                 } else if ("succClose" == val) {
                     vm.succMsg = false;
                 } else if ("loadingOpen" == val) {
@@ -740,7 +745,8 @@
                     pageSize:10,
                     pageNo:1,
                     statusCd:"",
-                    userId:userId
+                    userId:userId,
+                    type: LV
                 })
                     .then(function (response) {
                         if (response.status == 200 && response.data.resultCode == 0) {
@@ -767,7 +773,7 @@
                         userId = response.data.resultData.userId;
                     }else {
                         vm.showErrMsg(response.data.resultMsg);
-                        userId = "ZhuZeXin";
+                        userId = "WoBenWuMing";
                     }
                     vm.getTotalItem();
 
