--- a/service/src/main/webapp/forLeader.html
+++ b/service/src/main/webapp/forLeader.html
@@ -6,17 +6,9 @@
     <title>信访管理</title>
     <link rel="stylesheet" href="./static/css/weui.css" type="text/css">
     <link rel="stylesheet" href="./static/css/example.css" type="text/css">
-
+    <link rel="stylesheet" href="./static/css/self.css" type="text/css">
     <style>
-        .container {
-            overflow-y: auto;
-            padding-bottom: 50px;
-        }
 
-        .container h1 {
-            text-align: center;
-            letter-spacing: 5px;
-        }
     </style>
 </head>
 <body>
@@ -61,37 +53,114 @@
                 </div>
                 <div class="weui-tab__panel">
                     <!--查看信件列表-->
-                    <div class="weui-panel__hd">信件列表</div>
 
-                    <div class="weui-cells">
-                        <a class="weui-cell weui-cell_access" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>主题</p>
-                            </div>
-                            <div class="weui-cell__bd">
-                                <p>信件类型</p>
-                            </div>
-                            <div class="weui-cell__bd">
-                                <p>创建时间</p>
-                            </div>
+                    <div class="weui-panel weui-panel_access">
+                        <div class="weui-panel__hd">信件列表</div>
+                        <div class="weui-panel__bd">
 
-                        </a>
+                            <a v-for="item in dataList" :key="item.letterId"
+                               @click="queryDetailById(item.letterId)" class="weui-media-box weui-media-box_appmsg">
+                                <div class="weui-media-box__hd"
+                                     style="width: 70px;height: 70px;line-height: 70px;text-align: center; background-color: #eee;border-radius: 50%;">
+                                    <!--<img class="weui-media-box__thumb" src="" alt="">-->
+                                    <span class="weui-form-preview__value" v-html="changeStatus(item.statusCd)"></span>
+                                </div>
 
-                        <a class="weui-cell weui-cell_access" v-for="item in dataList" :key="item.letterId"
-                           @click="queryDetailById(item.letterId)">
-                            <div class="weui-cell__bd">
-                                <p>{{item.title}}</p>
-                            </div>
-                            <div class="weui-cell__bd">
-                                <p>{{item.type | changeType}}</p>
-                            </div>
-                            <div class="weui-cell__bd">
-                                <p>{{item.createDate | dateFormat}}</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
+                                <div class="weui-media-box__bd">
+                                    <h4 class="weui-media-box__title">{{item.title}}</h4>
+                                    <p class="weui-media-box__desc" style="margin: 2px 0px;">
+                                        {{item.contents}}
+                                    </p>
 
+                                    <div class="weui-flex weui-media-box__desc">
+                                        <div class="weui-flex__item">
+                                            <div class="placeholder">
+                                      <span class="setWidth">
+                                类型:
+                               </span>
+                                                {{item.type | changeType}}
+                                            </div>
+                                        </div>
+                                        <div class="weui-flex__item">
+                                            <div class="placeholder">
+                                     <span class="setWidth">
+                                部门:
+                              </span>
+                                                {{item.departmentName}}
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="weui-flex weui-media-box__desc">
+                                        <div class="weui-flex__item">
+                                            <div class="placeholder">
+                                  <span class="setWidth">
+                                写信:
+                               </span>
+                                                {{item.userName}}
+                                            </div>
+                                        </div>
+                                        <div class="weui-flex__item">
+                                            <div class="placeholder">
+                                     <span class="setWidth">
+                                日期:
+                                </span>
+                                                {{item.createDate.split(" ")[0]}}
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="weui-flex weui-media-box__desc" style="margin-top: 5px;">
+                                        <div class="weui-flex__item" >
+                                            <div class="placeholder">
+
+                                            </div>
+                                        </div>
+                                        <div class="weui-flex__item" style="color: #0082EF;">
+                                            <div class="placeholder">
+                                                点此查看信件详情>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </a>
+
+                        </div>
                     </div>
+
+
+                    <!--<div class="weui-panel__hd">信件列表</div>-->
+
+                    <!--<div class="weui-cells">-->
+                        <!--<a class="weui-cell weui-cell_access" href="javascript:;">-->
+                            <!--<div class="weui-cell__bd">-->
+                                <!--<p>主题</p>-->
+                            <!--</div>-->
+                            <!--<div class="weui-cell__bd">-->
+                                <!--<p>信件类型</p>-->
+                            <!--</div>-->
+                            <!--<div class="weui-cell__bd">-->
+                                <!--<p>创建时间</p>-->
+                            <!--</div>-->
+
+                        <!--</a>-->
+
+                        <!--<a class="weui-cell weui-cell_access" v-for="item in dataList" :key="item.letterId"-->
+                           <!--@click="queryDetailById(item.letterId)">-->
+                            <!--<div class="weui-cell__bd">-->
+                                <!--<p>{{item.title}}</p>-->
+                            <!--</div>-->
+                            <!--<div class="weui-cell__bd">-->
+                                <!--<p>{{item.type | changeType}}</p>-->
+                            <!--</div>-->
+                            <!--<div class="weui-cell__bd">-->
+                                <!--<p>{{item.createDate | dateFormat}}</p>-->
+                            <!--</div>-->
+                            <!--<div class="weui-cell__ft"></div>-->
+                        <!--</a>-->
+                    <!--</div>-->
+
 
 
                     <div class="weui-panel__ft" v-if="dataList.length < tatolCount">
@@ -324,7 +393,7 @@
         },
         computed:{
             isFinish(){
-                return  this.letterInfo.statusCd=='00S'|| this.letterInfo.statusCd=='00F';
+                return  this.letterInfo.statusCd=='00S'|| this.letterInfo.statusCd=='00F' || this.letterInfo.statusCd=='00D';
             }
         },
         filters: {
@@ -424,7 +493,7 @@
                 // EM:信访管理,LV:信访平台
                 const vm = this;
                 let code = !!this.getQueryString("code") ? this.getQueryString("code") : "gHpwe12SK2OKsahI8e39HjOy9Zpf6FJ_gblQsy5cdzs";
-                axios.get('letterVisist/queryUserId?type=EM&code='+code).then(function (response) {
+                axios.get('letterVisist/queryUserId?type='+EM+'&code='+code).then(function (response) {
                     // vueBus.$emit("info", "succOpen");
                     debugger
                     if(response.status == 200 && response.data.resultCode == 0){
@@ -432,8 +501,8 @@
                         vm.isLead = response.data.resultData.isLead;
                         // "isLead": "0"  -- 1：领导 0：督办
                     }else {
-                        // userId = "ChifLan";
-                        userId = "ZhuZeXin";
+                        userId = "ChifLan";
+                        // userId = "ZhuZeXin";
                         vm.showErrMsg(response.data.resultMsg);
                     }
                     vm.initLetterList();
@@ -557,6 +626,7 @@
                     pageSize:this.pageSize,
                     pageNo:this.currentPage,
                     statusCd:this.currentTab,
+                    userId: userId,
                     type:EM
                 }).then(function (response) {
                         if (response.status == 200 && response.data.resultCode == 0) {
