--- a/service/src/main/webapp/forEmployee.html
+++ b/service/src/main/webapp/forEmployee.html
@@ -185,21 +185,15 @@
                             {{item.contents}}
                         </p>
 
-                        <div class="weui-flex weui-media-box__desc">
+                        <div class="weui-flex weui-media-box__desc" style="margin: 10px 0px;">
                             <div class="weui-flex__item">
                                 <div class="placeholder">
-                                      <span class="setWidth">
-                                类型:
-                               </span>
                                     {{item.type | changeType}}
                                 </div>
                             </div>
-                            <div class="weui-flex__item">
+                            <div class="weui-flex__item" style="margin-left: 40px;">
                                 <div class="placeholder">
-                                     <span class="setWidth">
-                                部门:
-                              </span>
-                                    {{item.departmentName}}
+                                    {{item.userName}}
                                 </div>
                             </div>
                         </div>
@@ -207,35 +201,16 @@
                         <div class="weui-flex weui-media-box__desc">
                             <div class="weui-flex__item">
                                 <div class="placeholder">
-                                  <span class="setWidth">
-                                写信:
-                               </span>
-                                    {{item.userName}}
+                                    {{item.createDate}}
                                 </div>
                             </div>
-                            <div class="weui-flex__item">
+
+                            <div class="weui-flex__item" style="color: #0082EF;text-align: right; margin-right: 20px;">
                                 <div class="placeholder">
-                                     <span class="setWidth">
-                                日期:
-                                </span>
-                                    {{item.createDate.split(" ")[0]}}
+                                    详情>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="weui-flex weui-media-box__desc" style="margin-top: 5px;">
-                            <div class="weui-flex__item" >
-                                <div class="placeholder">
-
-                                </div>
-                            </div>
-                            <div class="weui-flex__item" style="color: #0082EF;">
-                                <div class="placeholder">
-                                点此查看信件详情>
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
                 </a>
 
